--- a/code/Team find/TF_index.html
+++ b/code/Team find/TF_index.html
@@ -28,11 +28,39 @@
         </header>
         <!-------------------------------main------------------------------------->
         <main>
+            <div class="post1">
+                <div class="post1_header">
+                    <img src="Assets/ava.png" class="post1_ava">
+                    <h1>Ищю тимейта для Brawl Stars.</h1>
+                    <img src="Assets/ops.png" class="post1_ops">
+                </div>
+                <div class="post1_main">
+                    <h2>Меня зовут Егор. Мне 14 лет. Ищю тимейта бравл старс. Есть микрофон. Играю по 2 часа в день. На аккаунте 6000кубков. Мейню Шелли.</h2>
+                    <img src="Assets/akk.jpg">
+                </div>
+                <div class="post1_footer">
+                    <h3>#brawlstars #findteam #duo #14лет #есть микрофон</h3>
+                </div>
+            </div>
 
         </main>
         <!-------------------------------footer----------------------------------->
         <footer>
-
+            <div>
+                <div class="logo_footer">
+                    <img src="Assets/logo.png">
+                </div>
+                <div class="soc">
+                    <img src="Assets/tg.png">
+                    <img src="Assets/vk.png">
+                    <img src="Assets/ds.png">
+                </div>
+            </div>
+            <div>
+                <div class="footer_text">
+                    <h3>Получилось мало и я понимаю, что скорее всего это плохо по сравнению с другими и что отмазки типо найс тима или куча долгов в шк не прокатит, но я обещаю что на следующих темах я подтянусь.</h3>
+                </div>
+            </div>
         </footer>
 
 
